--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,11 @@ dependencies:
   flutter_settings_screens:
   babstrap_settings_screen:
   fluttertoast:
+  simple_animations:
   google_nav_bar:
+  flutter_screenutil:
+  flutter_feather_icons:
+  google_fonts:
 dev_dependencies:
   flutter_test:
     sdk: flutter
