--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   google_fonts:
   hexcolor: ^3.0.1
   about: ^2.1.1
+  url_launcher: ^6.1.10
+  flutter_rating_bar: ^4.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
