--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   about: ^2.1.1
   url_launcher: ^6.1.10
   flutter_rating_bar: ^4.0.1
+  flutter_launcher_icons: ^0.12.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
